Add edit ingrediant